--- a/bower.json
+++ b/bower.json
@@ -8,6 +8,7 @@
     "bootstrap-sass": "^3.3.6",
     "font-awesome": "~4.5.0",
     "pretender": "~1.1.0",
-    "Faker": "~3.1.0"
+    "Faker": "~3.1.0",
+    "active-model-adapter": "^2.1.1"
   }
 }
