--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "ember-font-awesome": "2.1.1",
     "ember-load-initializers": "^0.5.1",
     "ember-resolver": "^2.0.3",
-    "loader.js": "^4.0.1"
+    "loader.js": "^4.0.1",
+    "phantomjs": "^2.1.7"
   }
 }
