--- a/bower.json
+++ b/bower.json
@@ -9,6 +9,10 @@
     "font-awesome": "~4.5.0",
     "pretender": "~1.1.0",
     "Faker": "~3.1.0",
-    "active-model-adapter": "^2.1.1"
+    "active-model-adapter": "^2.1.1",
+    "js-cookie": "^2.1.3"
+  },
+  "devDependencies": {
+    "js-cookie": "^2.1.3"
   }
 }
