package name revert

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mentorship-turing",
+  "name": "mentor-ship-frontend",
   "version": "0.0.0",
   "description": "Small description for mentor-ship-frontend goes here",
   "private": true,
